k8s/api-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
