k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: "/api/(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-service
                port:
                  number: 4000
